# tridigenerator_player

./: .gitignore  LICENSE  LICENSE-Apache-2.0  LICENSE-BSD-2-Clause  LICENSE-IJG  LICENSE-LGPLv3  LICENSE-MIT  LICENSE-MIT_like  LICENSE-MIT_or_Unlicense  LICENSE-MIT_or_happy_bunny  LICENSE-Zlib  README.md
client/: AGENTS.md  CMakeLists.txt  gradle.properties  settings.gradle.kts
client/dependencies/meta/SampleXrFramework/: CMakeLists.txt  Doxyfile
client/dependencies/meta/SampleXrFramework/Src/: XrApp.cpp
client/dependencies/meta/SampleXrFramework/Src/GUI/: VRMenuObject.cpp
client/dependencies/meta/SampleXrFramework/Src/Render/: DebugLines.cpp  GlGeometry.cpp  GlGeometry.h  GlGeometryDescriptor.cpp  GlProgram.h  SurfaceRender.cpp  UnlitGeometryRenderer.cpp  UnlitGeometryRenderer.h  VideoFrame.h  gl_pixel_format.h
client/tridigenerator_player/: CMakeLists.txt  COLOR_MATCHING.md  Doxyfile  README.md
client/tridigenerator_player/Projects/Android/: AndroidManifest.xml  build.gradle  local.properties  settings.gradle
client/tridigenerator_player/Src/: main.cpp
client/tridigenerator_player/Src/Components/: CameraLightEstimationComponent.h  ColorMatchingControl.h  ColorMatchingSettings.cpp  ColorMatchingSettings.h  CoreComponent.h  FrameLoaderComponent.h  InputComponent.h  InteractableComponent.h  SceneComponent.h  TransformComponent.h  UnlitGeometryRenderComponent.h
client/tridigenerator_player/Src/Core/: ComponentStorage.h  ECS.h  Entity.h  EntityManager.h  Logging.h  TDGenPlayerApp.cpp  TDGenPlayerApp.h
client/tridigenerator_player/Src/Data/: ColorReference.h  MaskVisibility.cpp  MaskVisibility.h  PlaybackControl.h  VipeDataset.cpp  VipeDataset.h
client/tridigenerator_player/Src/Dav1d/: Dav1dPlayer.cpp  Dav1dPlayer.h  data.h
client/tridigenerator_player/Src/Dav1d/common/: attributes.h  intops.h
client/tridigenerator_player/Src/Dav1d/tools/input/: annexb.cpp  demuxer.h  input.cpp  input.h  ivf.cpp  parse.h  section5.cpp
client/tridigenerator_player/Src/Linux/: LinuxDesktopApp.cpp  LinuxOpenXrBackend.cpp  LinuxOpenXrBackend.h  LinuxStereo.cpp  LinuxStereo.h  MaskVisibility.cpp  MaskVisibility.h
client/tridigenerator_player/Src/Shaders/: UnlitGeometryRenderShaders.h  pointcloud_es.frag  pointcloud_es.vert
client/tridigenerator_player/Src/States/: CameraLightEstimationState.h  CoreState.h  EnvironmentDepthState.h  FrameLoaderState.h  InputState.h  InteractionState.h  TransformState.h  UnlitGeometryRenderState.h
client/tridigenerator_player/Src/Systems/: Audio.cpp  Audio.h  AudioSystem.cpp  AudioSystem.h  CameraLightEstimationSystem.cpp  CameraLightEstimationSystem.h  CameraLightMath.h  CoreSystem.cpp  CoreSystem.h  EnvironmentDepthSystem.cpp  EnvironmentDepthSystem.h  FrameLoaderSystem.cpp  FrameLoaderSystem.h  Input.cpp  Input.h  InputSystem.cpp  InputSystem.h  InteractionMath.h  InteractionSystem.cpp  InteractionSystem.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  ScaleControl.h  SceneManager.cpp  SceneManager.h  SceneSystem.cpp  SceneSystem.h  TransformSystem.cpp  TransformSystem.h  UnlitGeometryRenderSystem.cpp  UnlitGeometryRenderSystem.h
client/tridigenerator_player/Src/Unsorted/: FrameLoader.cpp  FrameLoader.h  WebmInMemoryDemuxer.cpp  WebmInMemoryDemuxer.h  gl_mesh.cpp  gl_mesh.h
client/tridigenerator_player/Src/Videos/: AudioPcmBlock.h  WebmInMemoryDemuxer.cpp  WebmInMemoryDemuxer.h
client/tridigenerator_player/Tests/: CameraLightMathTests.cpp  ColorMatchingControlTests.cpp  ColorMatchingSettingsTests.cpp  ColorReferenceTests.cpp  InteractionMathTests.cpp  LinuxStereoTests.cpp  MaskVisibilityTests.cpp  PlaybackControlTests.cpp  ScaleControlTests.cpp  VipeDatasetTests.cpp  VipeDecoderTests.cpp
client/tridigenerator_player/java/: MainActivity.java  MainNativeActivity.java
client/tridigenerator_player/res/values/: strings.xml
preprocess/: load_vipe_results_encode_av1_ffv1_png_libsvtav1.py  requirements.txt  split_las_by_pointsourceid.py  split_las_by_pointsourceid_encode_av1_ffv1_png_libsvtav1.py  split_las_by_pointsourceid_encode_av1_libaom-av1.py  split_las_by_pointsourceid_encode_av1_librav1e.py  split_las_by_pointsourceid_encode_av1_libsvtav1.py  split_las_by_pointsourceid_encode_vp9_1stream.py  split_las_by_pointsourceid_encode_vp9_2streams.py  test_audio_preservation.py  test_color_references.py
preprocess/Deprecated/: requirements.txt  split_las_by_pointsourceid_encode_av1_librav1e.py  split_las_by_pointsourceid_encode_ffv1_libsvtav1_depth_only.py  split_las_by_pointsourceid_encode_vp9_1stream.py  split_las_by_pointsourceid_encode_vp9_2streams.py
server/: catalog.example.json  nginx.conf
